graphql-schema-parser/src/test/negative/malformed.graphqls
schema {
    query: Query
}

scalar String

    someIntField: Int
    someStringField: String
}